--- a/index.html
+++ b/index.html
@@ -1,22 +1,40 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>AltspaceVR Sample Project for A-Frame</title>
-		<script src="https://aframe.io/releases/0.3.0/aframe.min.js"></script>
-		<script src="https://cdn.rawgit.com/AltspaceVR/aframe-altspace-component/v1.0.0/dist/aframe-altspace-component.min.js"></script>
-	</head>
-	<body>
-		<a-scene altspace='vertical-align: bottom;'>
-		
-			<a-assets>
-				<!-- no assets in the template, but you can load yours here! -->
-			</a-assets>
-			
-			<a-box color='#441877' position='0 1.5 0'></a-box>
-			
-			<a-entity position='0 0 1.5'>
-				<a-camera />
-			</a-entity>
-		</a-scene>
-	</body>
+<head>
+    <title>AltspaceVR Sample Project for A-Frame</title>
+    <script src="https://aframe.io/releases/0.3.0/aframe.min.js"></script>
+    <script src="https://cdn.rawgit.com/AltspaceVR/aframe-altspace-component/v1.0.0/dist/aframe-altspace-component.min.js"></script>
+    <script>
+        AFRAME.registerComponent('cursor-listener', {
+            init: function () {
+                var lastIndex = -1;
+                var COLORS = ['red', 'green', 'blue'];
+                this.el.addEventListener('click', function (evt) {
+                    lastIndex = (lastIndex + 1) % COLORS.length;
+                    this.setAttribute('material', 'color', COLORS[lastIndex]);
+                    console.log('I was clicked at: ', evt.detail.intersection.point);
+                });
+            }
+        });
+    </script>
+</head>
+<body>
+    <a-scene altspace='vertical-align: bottom;'>
+
+        <a-assets>
+            <!-- no assets in the template, but you can load yours here! -->
+        </a-assets>
+
+        <a-box color='#441877' position='0 1.5 0' cursor-listener></a-box>
+
+        <a-entity position='0 0 1.5'>
+            <a-camera>
+                <a-entity cursor="fuse: true; fuseTimeout: 500"
+                          position="0 0 -1"
+                          geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03"
+                          material="color: black; shader: flat">
+            </a-camera>
+        </a-entity>
+    </a-scene>
+</body>
 </html>
