--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <!-- no assets in the template, but you can load yours here! -->
         </a-assets>
 
-        <a-box material="shader: standard; color: green; wireframe: true; transparent: true; opacity: 0.5" position='0 1.5 0' cursor-listener></a-box>
+        <a-box material="shader: standard; color: red; wireframe: true; transparent: true; opacity: 0.95" position='0 1.5 0' scale="6 1 1" cursor-listener></a-box>
 
         <a-entity position='0 0 1.5'>
             <a-camera>
