--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         </a-assets>
 
         <a-box material="shader: standard; color: blue; wireframe: true; transparent: true; opacity: 0.75" position='0 1.5 0' scale="30 1 1" cursor-listener></a-box>
+        <a-box material="shader: standard; color: green; wireframe: true; transparent: true; opacity: 0.75" position='0 3 0' scale="6 1 1"></a-box>
 
         <a-entity position='0 0 1.5'>
             <a-camera>
