--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
             <!-- no assets in the template, but you can load yours here! -->
         </a-assets>
 
-        <a-box material="shader: standard; color: blue; wireframe: true; transparent: true; opacity: 0.75" position='0 1.5 0' scale="6 1 1" cursor-listener></a-box>
-        <a-box material="shader: standard; color: green; wireframe: true; transparent: true; opacity: 0.75" position='0 3 0' scale="6 1 1"></a-box>
+        <a-entity light="type: directional; color: #EEE; intensity: 0.5" position="-1 1 0"></a-entity>
+
+        <a-box material="shader: standard; color: blue; wireframe: true; transparent: false; opacity: 0.9" position='0 1.5 0' scale="6 1 1" cursor-listener></a-box>
+        <a-box material="shader: standard; color: green; wireframe: true; transparent: false; opacity: 0.9" position='0 3 0' scale="6 1 1"></a-box>
 
         <a-entity position='0 0 1.5'>
             <a-camera>
