--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a-entity light="type: directional; color: #EEE; intensity: 0.5" position="-1 1 0"></a-entity>
 
         <a-box material="shader: standard; color: red; wireframe: true; transparent: false; opacity: 1.0" position='0 1.5 0' scale="6 1 1" cursor-listener></a-box>
-        <a-box material="shader: standard; color: green; wireframe: true; transparent: false; opacity: 1.0" position='0 3 0' scale="6 1 1"></a-box>
+        <a-box material="shader: standard; color: blue; wireframe: true; transparent: false; opacity: 1.0" position='0 3 0' scale="6 1 1"></a-box>
 
         <a-entity position='0 0 1.5'>
             <a-camera>
